--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </div>
 
     <div class="card item">
-      <img src="image/Thali.jpg" alt="Veg Thali" style="width:100%;border-radius:12px;margin-bottom:10px;">
+      <img src="image/thali.jpg" alt="Veg Thali" style="width:100%;border-radius:12px;margin-bottom:10px;">
       <h3>Everyday Pure Veg Thali</h3>
       <p class="price">₹129</p>
       <button onclick="selectItem(129)">Order This</button>
@@ -162,14 +162,14 @@
     </div>
   
     <div class="card item">
-      <img src="image/Manchurian.jpg" alt="Manchurian" style="width:100%; border-radius:12px; margin-bottom:10px;">
+      <img src="image/manchurian.jpg" alt="Manchurian" style="width:100%; border-radius:12px; margin-bottom:10px;">
       <h3>Manchurian</h3>
       <p class="price">₹99</p>
       <button onclick="selectItem(99)">Order This</button>
     </div>
   
     <div class="card item">
-    <img src="image/Momo.jpg" alt="Momo" style="width:100%; border-radius:12px; margin-bottom:10px;">
+    <img src="image/momo.jpg" alt="Momo" style="width:100%; border-radius:12px; margin-bottom:10px;">
       <h3>Momos</h3>
       <p class="price">₹69</p>
       <button onclick="selectItem(69)">Order This</button>
@@ -242,3 +242,4 @@ function payNow() {
 
 </body>
 </html>
+
